service2.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-node
  namespace: web-ap
  labels:
    app: nginx
spec:
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: NodePort
